Application/frontend/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp-frontend
  labels:
    app: frontend
  annotations:
    flux.weave.works/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: 456433905815.dkr.ecr.us-east-2.amazonaws.com/frontend:8fa62e8
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
            memory: 1024Mi
          requests:
            cpu: 500m
            memory: 1024Mi
