Application/frontend/service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: ui
# spec:
#   type: LoadBalancer
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 3000
#   selector:
#     app: frontend

apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: frontend
