Application/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /health
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /addAccount/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /deposit/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /debit/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /login
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /getAccountsByUser/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /listOperations/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /signup
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 80
